[tool.poetry]
name = "sqlalchemy-playground"
version = "0.1.0"
description = "Dangerous playground for sqlalchemy stuff"
authors = ["Justin Bramley"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.31"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
